# LuMoSDK

./: .gitignore  FZMotion_Receive_Sample.cpp  READEME.md  README.md  build_and_run.sh  handeye_calibration.json
include/: LuMoDataStruct.hpp
src/mocap_bridge/: CMakeLists.txt  package.xml
src/mocap_bridge/msg/: Marker.msg  MocapData.msg  RigidBody.msg
src/mocap_bridge/scripts/: data_save.py  mocap_subscriber.py  optimize_offset.py  plot_auto.py  plot_auto_calib copy.py  plot_auto_calib.py  plot_ball.py  plot_box.py  plot_reference.py  refine_ball_extrinsic.py
src/mocap_bridge/scripts/detection/: eval.py  eval_ros.py  model_download.txt  sphere_fit.py  train.py
src/mocap_bridge/scripts/detection/calib/: ChArUco.py  aruco_handeye_calib.py  charuco_mocap_handeye_calib.py  handeye_ball_refined.json  handeye_calib.py  handeye_calibration.json
src/mocap_bridge/scripts/detection/device/: realsense_camera.py  zed_camera.py
src/mocap_bridge/scripts/detection/model/: format.py
src/mocap_bridge/scripts/detection/record/: target_tracker.py
src/mocap_bridge/src/: mocap_publisher.cpp
